PageWrap mobile style fix
(Chrome) Bottom was clipped while overlay active and page was scrolled a bit down. Possible cause: collapsable address bar expanded viewport height. Solution: height 100vh is more accurate than top: 0 + bottom: 0.

--- a/src/PageWrap.scss
+++ b/src/PageWrap.scss
@@ -6,8 +6,8 @@
 	&.sky-overlay-active {
 		position: absolute;
 		top: 0;
-		bottom: 0;
 		left: 0;
+		height: 100.1vh;
 	}
 }
 
